objects/Lighthouse_Worksheets__c.object
<CustomObject>
    <fields>
        <fullName>Account_Pinned_in_Bomgar2__c</fullName>
        <label>Account Pinned in Bomgar?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes  - Pinned Account</fullName>
                </value>
                <value>
                    <fullName>Yes - Already Pinned</fullName>
                </value>
                <value>
                    <fullName>No - Customer Declined</fullName>
                </value>
                <value>
                    <fullName>No - Unable to Confirm with Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activate_Birthday_Msgs__c</fullName>
        <label>Activate Birthday Msgs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activate_Newsletters__c</fullName>
        <label>Activate Newsletters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activate_Reactivation_Letters__c</fullName>
        <label>Activate Reactivation Letters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Emails__c</fullName>
        <label>Activated Emails?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Maintenance_Reminder_PCs__c</fullName>
        <label>Activated Maintenance Reminder PCs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Newsletters__c</fullName>
        <label>Activated Newsletters?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_OBC__c</fullName>
        <label>Activated OBC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Postcards__c</fullName>
        <label>Activated Postcards?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Reactivation_Letters__c</fullName>
        <label>Activated Reactivation Letters?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Recall_Postcards__c</fullName>
        <label>Activated Recall/Follow Up Postcards?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Recommend_Services_PCs__c</fullName>
        <label>Activated Recommend Services PCs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Text__c</fullName>
        <label>Activated Text?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_G5_at_end_of_club_portal_screen_name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add G5 at end of club/portal screen name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_NEW_PMS_to_Details_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add NEW PMS to Details Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_New_Portal_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>home.lh360.com?clientID=XXXXXX</inlineHelpText>
        <label>Add New Portal URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_PC_Letter_Pricing_for_Canada__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the customer is in Canada, you need to add special pricing at $1.79 for Postcards and $2.49 for Letters</inlineHelpText>
        <label>Add PC &amp; Letter Pricing for Canada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_PMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add PMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_PMS_to_Details_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add PMS to Details Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_dashes_to_office_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add dashes to office phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_install_date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This should be today/install date</inlineHelpText>
        <label>Add install date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_logo_to_Email_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Logo to Email Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_newsletter_date_to_new_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add newsletter date to new account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_newsletter_email_to_new_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add newsletter email to new account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_subscription_expires_date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This should be one month from today/install</inlineHelpText>
        <label>Add subscription expires date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Time_Reason__c</fullName>
        <label>Additional Time Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Issues</fullName>
                </value>
                <value>
                    <fullName>Admin Access</fullName>
                </value>
                <value>
                    <fullName>Escalated to DEV</fullName>
                </value>
                <value>
                    <fullName>Internal Sites down</fullName>
                </value>
                <value>
                    <fullName>Internet Issues</fullName>
                </value>
                <value>
                    <fullName>IT Problems</fullName>
                </value>
                <value>
                    <fullName>Machine Security</fullName>
                </value>
                <value>
                    <fullName>Multiple Locations</fullName>
                </value>
                <value>
                    <fullName>Remote Connection Issues</fullName>
                </value>
                <value>
                    <fullName>Sync Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Time__c</fullName>
        <label>Additional Time</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addressed_Issues__c</fullName>
        <label>Addressed Issues?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Check_for_Recall_Issues__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Issues Resolved</fullName>
                </value>
                <value>
                    <fullName>Issues Pending Resolution - CSC Team</fullName>
                </value>
                <value>
                    <fullName>Issues Pending Resolution - Config Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Portal_Verifications__c</fullName>
        <label>Admin Portal Verifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verify RAB NAP Info</fullName>
                </value>
                <value>
                    <fullName>Verify Survey MGR Settings</fullName>
                </value>
                <value>
                    <fullName>Verify Task MGR Settings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert1__c</fullName>
        <formula>IMAGE(
CASE(OwnerId,
"00G60000001mKtM", "/img/samples/rating1.gif",
"/img/samples/rating5.gif"),
"status color")</formula>
        <label>Owner Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_email__c</fullName>
        <label>Appointment email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Appt_Cancellation_Note_on_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appt Cancellation Note on Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistance_Needed_With__c</fullName>
        <label>Assistance Needed With</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Report Pro</fullName>
                </value>
                <value>
                    <fullName>Lube Sticker Pro</fullName>
                </value>
                <value>
                    <fullName>Message Manager</fullName>
                </value>
                <value>
                    <fullName>Welcome Station</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mobile Manager</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attempt_Date_1__c</fullName>
        <label>Attempt Date 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attempt_Date_2__c</fullName>
        <label>Attempt Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attempt_Date_3__c</fullName>
        <label>Attempt Date 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoCalls_Notes__c</fullName>
        <label>AutoCalls Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AutoCalls__c</fullName>
        <label>AutoCalls</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Calls_Check_Contest__c</fullName>
        <formula>if(
ispickval( AutoCalls__c , "Yes"),
1,0)</formula>
        <label>Auto Calls Check Contest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verify Billing Install (Yodle Live)</fullName>
                </value>
                <value>
                    <fullName>Verify Billing Invoiced (Yodle Live)</fullName>
                </value>
                <value>
                    <fullName>Verify NEXT Billing Info (Sugar)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthday_Messages_Check_Contest__c</fullName>
        <formula>if(
and(
ispickval( Activate_Birthday_Msgs__c , "Yes"),
includes ( Birthday_Msgs_Details__c , "Postcards")),
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday Messages Check Contest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Msgs_Details__c</fullName>
        <label>Birthday Msgs Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Activate_Birthday_Msgs__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Emails</fullName>
                </value>
                <value>
                    <fullName>Postcards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthday_Value__c</fullName>
        <label>Birthday Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bolt_On__c</fullName>
        <formula>if( 
AND(contains(Practice_Name__r.Product_Type__c,"WELCOME_STATION"),contains(Practice_Name__r.Product_Type__c,"MOBILE_MANAGER")), 
"Mobile Manager, Pro Pack &amp; Welcome Station", 

if( 
contains(Practice_Name__r.Product_Type__c,"MOBILE_MANAGER"), 
"Mobile Manager &amp; Pro Pack", 

if( 
contains(Practice_Name__r.Product_Type__c,"WELCOME_STATION"), 
"Pro Pack &amp; Welcome Station", 

if( 
contains(Practice_Name__r.Product_Type__c,"PRO_PACK"), 
"Pro Pack", 

"Lighthouse"))))</formula>
        <label>Bolt On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bomgar_Pin_Script__c</fullName>
        <formula>"***YOU MUST READ THIS TO GET CUSTOMER CONSENT BEFORE PINNING IN BOMGAR***"

&amp;BR()&amp;BR()&amp;

"'One last thing before we hop off. We have the ability to update our settings so that way if there are any sync issues that would require us to access your system in the future we can remote in without having to interrupt your day. Does that work for you?'"</formula>
        <label>Bomgar Pin Script</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bomgar_Shortcut__c</fullName>
        <description>link to Bomgar shortcut</description>
        <formula>HYPERLINK("https://remote.lh360.com/api/start_session?issue_menu=3&amp;customer.name="&amp;  Practice_Name__r.Name  &amp;"&amp;customer.company="&amp;Practice_Name__r.Name &amp;"&amp;codeName=OOS&amp;customer.desc="&amp;Yodle_ID__c,"https://remote.lh360.com/api/start_session?issue_menu=3&amp;customer.name="&amp;  Practice_Name__r.Name  &amp;"&amp;customer.company="&amp;Practice_Name__r.Name &amp;"&amp;codeName=OOS&amp;customer.desc="&amp;Yodle_ID__c)</formula>
        <label>Bomgar Shortcut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <formula>Practice_Name__r.BillingStreet &amp; " " &amp; Practice_Name__r.BillingCity &amp; ", " &amp; Practice_Name__r.BillingState &amp; " "&amp; Practice_Name__r.BillingPostalCode</formula>
        <label>Business Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CABD2__c</fullName>
        <label>CABD2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPP_Account__c</fullName>
        <formula>Practice_Name__r.CPP_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPP Account?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapAutoApptPC__c</fullName>
        <formula>IF( AND(ISPICKVAL(LTR_Postcard_4_weeks_2_days_before__c, "Disable ALL"),ISPICKVAL(LTR_Postcard_2_2_weeks_before__c,"Disable ALL")),"http://marketing.yodle.com/assets/email/csc-email/not-activated.png","http://marketing.yodle.com/assets/email/csc-email/activated.png")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSCRecapAutoApptPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapBdayEmail__c</fullName>
        <formula>IF(
ISPICKVAL( Activate_Birthday_Msgs__c ,"No"),"http://marketing.yodle.com/assets/email/csc-email/not-activated.png",

IF(
INCLUDES( Birthday_Msgs_Details__c ,"Emails"),"http://marketing.yodle.com/assets/email/csc-email/activated.png","http://marketing.yodle.com/assets/email/csc-email/not-activated.png"))</formula>
        <label>CSCRecapBdayEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapBdayPC__c</fullName>
        <formula>IF( 
ISPICKVAL( Activate_Birthday_Msgs__c ,"No"),"http://marketing.yodle.com/assets/email/csc-email/not-activated.png", 

IF( 
INCLUDES( Birthday_Msgs_Details__c ,"Postcards"),"http://marketing.yodle.com/assets/email/csc-email/activated.png","http://marketing.yodle.com/assets/email/csc-email/not-activated.png"))</formula>
        <label>CSCRecapBdayPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapEmail__c</fullName>
        <formula>IF( 
ISPICKVAL( Emails__c  , "Yes"),"http://marketing.yodle.com/assets/email/csc-email/activated.png","http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapLTRPC__c</fullName>
        <formula>IF( 
ISPICKVAL(  Postcards__c  , "Yes"),"http://marketing.yodle.com/assets/email/csc-email/activated.png","http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapLTRPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapMainRemPC__c</fullName>
        <formula>IF( 
ISPICKVAL(  Disable_Recall_Postcards_for_Patients__c  , "Disable ALL"),"http://marketing.yodle.com/assets/email/csc-email/not-activated.png","http://marketing.yodle.com/assets/email/csc-email/activated.png")</formula>
        <label>CSCRecapMainRemPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapNewHmOwnrPC__c</fullName>
        <formula>IF( 
ISPICKVAL( New_Homeowner_Postcard_Status__c , "No"),"http://marketing.yodle.com/assets/email/csc-email/not-activated.png","http://marketing.yodle.com/assets/email/csc-email/activated.png")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSCRecapNewHmOwnrPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapNewsletters__c</fullName>
        <formula>IF(
 ISPICKVAL(Activated_Newsletters__c , "Yes"),"http://marketing.yodle.com/assets/email/csc-email/activated.png","http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapNewsletters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapOBC__c</fullName>
        <formula>IF( 
ISPICKVAL( AutoCalls__c , "Yes"),"http://marketing.yodle.com/assets/email/csc-email/activated.png","http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapOBC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapReactivationLetter__c</fullName>
        <formula>IF( 
ISPICKVAL( Activate_Reactivation_Letters__c  , "Yes"),"http://marketing.yodle.com/assets/email/csc-email/activated.png","http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapReactivationLetter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapRecServPC__c</fullName>
        <formula>IF( 
ISPICKVAL(  Postcard_Status_AUTO__c  , "Disable ALL"),"http://marketing.yodle.com/assets/email/csc-email/not-activated.png","http://marketing.yodle.com/assets/email/csc-email/activated.png")</formula>
        <label>CSCRecapRecServPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapRecallEmail__c</fullName>
        <formula>IF( 
Pause_Recall_Campaign__c = TRUE, 
"http://marketing.yodle.com/assets/email/csc-email/not-activated.png","http://marketing.yodle.com/assets/email/csc-email/activated.png")</formula>
        <label>CSCRecapRecallEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapRecallPC__c</fullName>
        <formula>IF( 

OR( 

Pause_Recall_Campaign__c = TRUE, 

ISPICKVAL( Disable_Recall_Postcards_for_Patients__c ,"Disable ALL"), 

AND( 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"Recently Past Due"), 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"3 MO"), 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"6 MO"), 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"1 YR"), 
OR( 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"Coming Due"), 
ISPICKVAL(Change_Coming_Due_Weeks_Postcard__c , "No Coming Due Postcards"))), 

AND( 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"Recently Past Due"), 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"6 WK"), 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"6 MO"), 
OR( 
INCLUDES( Disable_these_PC_s_if_applicable__c ,"Coming Due"), 
ISPICKVAL( Change_Coming_Due_Days_Postcard__c , "No Coming Due Postcards")))), 

"http://marketing.yodle.com/assets/email/csc-email/not-activated.png", 

"http://marketing.yodle.com/assets/email/csc-email/activated.png")</formula>
        <label>CSCRecapRecallPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapRecallText__c</fullName>
        <formula>IF( 
Pause_Recall_Campaign__c = TRUE, 
"http://marketing.yodle.com/assets/email/csc-email/not-activated.png","http://marketing.yodle.com/assets/email/csc-email/activated.png")</formula>
        <label>CSCRecapRecallText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapText__c</fullName>
        <formula>IF( 
ISPICKVAL( Texts__c  , "Yes"),"http://marketing.yodle.com/assets/email/csc-email/activated.png","http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapTxEmail__c</fullName>
        <formula>IF( 
OR(
ISPICKVAL( Tx_Plan_Msg_1_Type__c ,"Email (Default)"), 
ISPICKVAL( Tx_Plan_Msg_2_Type__c ,"Email"),
ISPICKVAL( Tx_Plan_Msg_3_Type__c ,"Email (Default)"),
ISPICKVAL( Tx_Plan_Msg_4_Type__c ,"Email")),
"http://marketing.yodle.com/assets/email/csc-email/activated.png",
"http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapTxEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapTxLetter__c</fullName>
        <formula>IF( 
ISPICKVAL( Tx_Plan_Msg_4_Type__c ,"Letter (Default)"),
"http://marketing.yodle.com/assets/email/csc-email/activated.png", 
"http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapTxLetter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCRecapTxPC__c</fullName>
        <formula>IF( 
ISPICKVAL( Tx_Plan_Msg_2_Type__c ,"Postcard (Default)"), 
"http://marketing.yodle.com/assets/email/csc-email/activated.png", 
"http://marketing.yodle.com/assets/email/csc-email/not-activated.png")</formula>
        <label>CSCRecapTxPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Completed_Date__c</fullName>
        <label>CSC Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSC_Completed_Month__c</fullName>
        <formula>CASE(
  MONTH(  CSC_Completed_Date__c  ),
  1, "01 - January",
  2, "02 - February",
  3, "03 - March",
  4, "04 - April",
  5, "05 - May",
  6, "06 - June",
  7, "07 - July",
  8, "08 - August",
  9, "09 - September",
  10, "10 - October",
  11, "11 - November",
  "12 - December"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSC Completed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Date__c</fullName>
        <label>CSC/AR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSC_Notes__c</fullName>
        <label>Notes for CSC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Recap_Email_Address_2__c</fullName>
        <label>CSC Recap Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSC_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSC Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lighthouse_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Time__c</fullName>
        <description>last edit 03/07/2017</description>
        <label>CSC/AR Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00am EST</fullName>
                </value>
                <value>
                    <fullName>8:15am EST</fullName>
                </value>
                <value>
                    <fullName>8:30am EST</fullName>
                </value>
                <value>
                    <fullName>8:45am EST</fullName>
                </value>
                <value>
                    <fullName>9:00am EST</fullName>
                </value>
                <value>
                    <fullName>9:15am EST</fullName>
                </value>
                <value>
                    <fullName>9:30am EST</fullName>
                </value>
                <value>
                    <fullName>9:45am EST</fullName>
                </value>
                <value>
                    <fullName>10:00am EST</fullName>
                </value>
                <value>
                    <fullName>10:15am EST</fullName>
                </value>
                <value>
                    <fullName>10:30am EST</fullName>
                </value>
                <value>
                    <fullName>10:45am EST</fullName>
                </value>
                <value>
                    <fullName>11:00am EST</fullName>
                </value>
                <value>
                    <fullName>11:15am EST</fullName>
                </value>
                <value>
                    <fullName>11:30am EST</fullName>
                </value>
                <value>
                    <fullName>11:45am EST</fullName>
                </value>
                <value>
                    <fullName>12:00pm EST</fullName>
                </value>
                <value>
                    <fullName>12:15pm EST</fullName>
                </value>
                <value>
                    <fullName>12:30pm EST</fullName>
                </value>
                <value>
                    <fullName>12:45pm EST</fullName>
                </value>
                <value>
                    <fullName>1:00pm EST</fullName>
                </value>
                <value>
                    <fullName>1:15pm EST</fullName>
                </value>
                <value>
                    <fullName>1:30pm EST</fullName>
                </value>
                <value>
                    <fullName>1:45pm EST</fullName>
                </value>
                <value>
                    <fullName>2:00pm EST</fullName>
                </value>
                <value>
                    <fullName>2:15pm EST</fullName>
                </value>
                <value>
                    <fullName>2:30pm EST</fullName>
                </value>
                <value>
                    <fullName>2:45pm EST</fullName>
                </value>
                <value>
                    <fullName>3:00pm EST</fullName>
                </value>
                <value>
                    <fullName>3:15pm EST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CW_Quality_Notes__c</fullName>
        <label>CW Quality Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CW_Quality__c</fullName>
        <label>CW Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfactory: No Issues</fullName>
                </value>
                <value>
                    <fullName>Satisfactory: Issues Promptly Addressed</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory: Recall Not Addressed</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory: Pre-CSC Check Notes Not Addressed</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory: Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Time__c</fullName>
        <label>Call Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Verbiage_Include_EM_and_SS__c</fullName>
        <label>Cancellation Verbiage(include EM &amp; SMS)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Age_Bus_Days__c</fullName>
        <formula>If(ISBLANK(Closed_Date__c),

CASE( MOD( DATEVALUE( Date_Time_Opened__c )  - DATE(1985,6,24),7), 
0,CASE( MOD( Today() - DATEVALUE( Date_Time_Opened__c ) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1,CASE( MOD( Today() - DATEVALUE( Date_Time_Opened__c ) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2,CASE( MOD( Today() - DATEVALUE( Date_Time_Opened__c ) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3,CASE( MOD( Today() - DATEVALUE( Date_Time_Opened__c ) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4,CASE( MOD( Today() - DATEVALUE( Date_Time_Opened__c ) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5,CASE( MOD( Today() - DATEVALUE( Date_Time_Opened__c ) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6,CASE( MOD( Today() - DATEVALUE( Date_Time_Opened__c ) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999) 
+
(FLOOR(( Today() - DATEVALUE( Date_Time_Opened__c ) )/7)*5-1), 

CABD2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (Bus Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF( ISPICKVAL( Status__c ,"Completed"), 
(    DT_Closed_OB__c   -  Date_Time_Opened__c ),(NOW() - Date_Time_Opened__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>